--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
       <script src="./include/FileSaver.min.js"></script>
       <script src="./include/jquery-resizable.js"></script>
       <script src="./include/jquery-resizableTableColumns.js"></script>
-      <script src="./js/_index.js"></script>
+      <script src="./js/index.js"></script>
 </body>
 
 </html>
